# datafusion-python

./: Cargo.toml  memoriam_test.py  pyproject.toml
python/datafusion/: __init__.py  context.py
src/: context.rs  lib.rs  memoriam.rs  utils.rs
