# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-python"
version = "42.0.0"
homepage = "https://datafusion.apache.org/python"
repository = "https://github.com/apache/datafusion-python"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache DataFusion DataFrame and SQL Query Engine"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.78"
include = ["/src", "/datafusion", "/LICENSE.txt", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[features]
default = ["mimalloc"]
protoc = [ "datafusion-substrait/protoc" ]
substrait = ["dep:datafusion-substrait"]
object-store = []

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38"] }
arrow = { version = "53", features = ["pyarrow"] }
datafusion = { version = "42.0.0", features = ["pyarrow", "avro", "unicode_expressions"] }
datafusion-substrait = { version = "42.0.0", optional = true }
datafusion-proto = { version = "42.0.0" }
prost = "0.13" # keep in line with `datafusion-substrait`
uuid = { version = "1.9", features = ["v4"] }
mimalloc = { version = "0.1", optional = true, default-features = false, features = ["local_dynamic_tls"] }
async-trait = "0.1"
futures = "0.3"
# object_store = { version = "0.11.0", features = ["aws", "gcp", "azure", "http"] }
object_store = { version = "0.11.0", features = [] }
url = "2"
async-stream = "0.3"
bytes = "1"
domain-engine-core = { git = "ssh://git@gitlab.com/protojour/memoriam/domain-engine.git" }
domain-engine-datafusion = { git = "ssh://git@gitlab.com/protojour/memoriam/domain-engine.git" }
domain-engine-arrow = { git = "ssh://git@gitlab.com/protojour/memoriam/domain-engine.git" }
ontol-runtime = { git = "ssh://git@gitlab.com/protojour/memoriam/domain-engine.git" }
postcard = "1"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tokio = { version = "1.39", features = ["macros", "rt", "rt-multi-thread", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.39", features = ["macros", "rt", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["pyodide"] }

[patch.crates-io]
reqwest = { git = "https://github.com/audunhalland/reqwest.git", branch = "pyodide" }

[build-dependencies]
prost-types = "0.13" # keep in line with `datafusion-substrait`
pyo3-build-config = "0.22"

[lib]
name = "datafusion_python"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1
